# research-assignment-LU-decomposition

./: README.md  attachments.tex  bibliografie.tex  bibliography.bib  bibliography.tex  ch1_theory.tex  ch2_implementation.tex  ch3_benchmark-results.tex  ch3_comparing-decomposition-implementations.tex  conclusion.tex  introduction.tex  preface.tex  research_assignment_LU_Decomposition_GPU.tex
CD/: README.html  README.md
CD/benchmarks/set_14_matrices/: ICM16_double_14_matrices.xlsx  ICM16_float_14_matrices.xlsx  ICM32_double_14_matrices.xlsx  ICM32_float_14_matrices.xlsx  ICM8_double_14_matrices.xlsx  ICM8_float_14_matrices.xlsx
CD/lu-decomposition/: .gitignore  CMakeLists.txt  README.md  build
CD/lu-decomposition/src/Benchmark/: CMakeLists.txt  decomp.h  decomposition-benchmark.cpp  decomposition-benchmark.h
CD/lu-decomposition/src/Benchmark/scripts/: decomposition-benchmark-make-tables-json.py  get-matrices  run-decomposition-benchmark
CD/lu-decomposition/src/Benchmark/scripts/python_libs/: constants.py
CD/lu-decomposition/src/Benchmark/utils/: BenchmarkCPUCroutResults.h  DecompositionBenchmarkResult.h  MatrixInfo.h
resources/plot-csv-files/: 14-matrices-double-precision-rci.csv  14-matrices-double-precision-rci.xlsx  14-matrices-single-precision-rci.csv  14-matrices-single-precision-rci.xlsx  63-matrices-double-precision-rci.csv  63-matrices-double-precision-rci.xlsx  63-matrices-single-precision-rci.csv  63-matrices-single-precision-rci.xlsx  optimizations-50-matrices-double-precision-gp7.csv  optimizations-50-matrices-double-precision-gp7.xlsx
(+52 files in other folders)
